# HamburglarRadar

./: .dockerignore  .env.example  .gitignore  Dockerfile  IMPLEMENTATION_SCHEMA.md  README.md  docker-compose.yml  pyproject.toml
config/: app.yml  profiles.yml
config/prompts/: collision_check.md  daily_digest.md  paper_summary.md  relevance_judge.md
src/: __init__.py  config.py  llm.py  main.py  models.py  timesource.py
src/agent/: cli.py  command_parser.py  feishu_ws.py  llm_agent.py  permissions.py  router.py  serve.py  session.py  tools.py
src/arxiv/: client.py  normalizer.py  query_builder.py
src/feishu/: app_client.py  base_writer.py  card_renderer.py  hermes_adapter.py  lark_cli.py  message_sender.py
src/observability/: audit.py  logger.py  metrics.py
src/relevance/: embeddings.py  feedback_model.py  keyword_filter.py  llm_judge.py  ranker.py
src/scheduler/: cron.py  daily_digest_job.py
src/storage/: db.py  repositories.py
src/storage/migrations/: 001_init.sql  002_sessions.sql
src/summarizer/: abstract_summary.py
tests/: conftest.py  test_arxiv_query_builder.py  test_card_renderer.py  test_command_parser.py  test_config_time.py  test_conversation_memory.py  test_daily_digest_integration.py  test_digest_ordering.py  test_lark_cli_safety.py  test_llm_agent.py  test_relevance_ranker.py  test_session_persistence.py
tests/fixtures/: arxiv_feed_sample.xml
