[project]
name = "arxiv-feishu-research-agent"
version = "0.1.0"
description = "可长期运行的飞书研究助理：每日 arXiv 晨报 + 群内即时调研命令"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.5",
    "PyYAML>=6.0",
    "httpx>=0.27",
    "feedparser>=6.0",
    "python-dotenv>=1.0",
    "APScheduler>=3.10",
    "fastembed>=0.3",
    "lark-oapi>=1.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["src"]

[tool.setuptools.package-data]
"*" = ["*.sql"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
